Fixes and add more filters per unit of time (seconds, minutes, hours and days)

--- a/src/Resources/config/services/extensions.yml
+++ b/src/Resources/config/services/extensions.yml
@@ -1,7 +1,7 @@
 services:
 
     randock.time_interval_bundle.readable_time_interval_extension:
-      class: Randock\TimeIntervalBundle\TwigExtension\ReadableTimeIntervalExtension.php
+      class: Randock\TimeIntervalBundle\TwigExtension\ReadableTimeIntervalExtension
       tags:
-      - { name: twig.extension }
+          - { name: twig.extension }
 
