--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   "prefer-stable": true,
   "require": {
     "randock/time-interval": "^0.1",
-    "symfony/framework-bundle": "^3.0",
+    "symfony/framework-bundle": "^3.0|^4.0",
     "twig/twig": "^2.7"
   },
   "require-dev": {
