--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "randock/time-interval": "^0.1",
-    "symfony/framework-bundle": "^3.0|^4.0",
+    "randock/time-interval": ">=0.1",
+    "symfony/framework-bundle": ">=3.0|>=4.0",
     "twig/twig": "^2.7"
   },
   "require-dev": {
