--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require": {
     "randock/time-interval": ">=0.1",
     "symfony/framework-bundle": ">=3.0|>=4.0",
-    "twig/twig": "^2.7"
+    "twig/twig": ">=2"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5"
